<resources>
    <string name="app_name">Maciej_Koch_czw_8_00</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="up_arrow">2191</string>
    <string name="down_arrow">2193</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="currencies">Currencies</string>
    <string name="currency_code">currencyCode</string>
    <string name="currency_rate">currencyRate</string>
    <string name="currency_flag">FLAG</string>
    <string name="rate_diff">+-</string>
    <string name="currency_flag_code">flag</string>
    <string name="empty_text">Loading …</string>
    <string name="gold">Gold</string>
    <string name="converter">Converter</string>
    <string name="current_gold_value">CurrentGoldValue</string>
    <string name="pick_rate_text">Pick a rate !</string>
    <string name="chosen_current_rate">chosenCurrentRate</string>
    <string name="prev_current_rate">prevCurrentRate</string>
    <string name="textview">chosenCurrencyName</string>
    <string name="up">TextView</string>
    <string name="otherCurrencyCountValue" />
    <string name="pln_text">PLN</string>


    <string name="AFN">U+1F1E6 U+1F1EB</string>
    <string name="MGA">U+1F1F2 U+1F1EC</string>
    <string name="VND">U+1F1FB U+1F1F3</string>
    <string name="PAB">U+1F1F5 U+1F1E6</string>
    <string name="ALL">U+1F1E6 U+1F1F1</string>
    <string name="DZD">U+1F1E9 U+1F1FF</string>
    <string name="USD">U+1F1FA U+1F1F8</string>
    <string name="EUR">U+1F1EA U+1F1FA</string>
    <string name="AOA">U+1F1E6 U+1F1F4</string>
    <string name="XCD">U+1F1E6 U+1F1EE</string>
    <string name="ARS">U+1F1E6 U+1F1F7</string>
    <string name="AMD">U+1F1E6 U+1F1F2</string>
    <string name="AWG">U+1F1E6 U+1F1FC</string>
    <string name="AUD">U+1F1E6 U+1F1FA</string>
    <string name="BSD">U+1F1E7 U+1F1F8</string>
    <string name="CZK">U+1F1E8 U+1F1FF</string>
    <string name="BHD">U+1F1E7 U+1F1ED</string>
    <string name="BDT">U+1F1E7 U+1F1E9</string>
    <string name="BYN">U+1F1E7 U+1F1FE</string>
    <string name="BZD">U+1F1E7 U+1F1FF</string>
    <string name="XOF">U+1F1E8 U+1F1EC</string>
    <string name="BMD">U+1F1E7 U+1F1F2</string>
    <string name="INR">U+1F1EE U+1F1F3</string>
    <string name="BOB">U+1F1E7 U+1F1F4</string>
    <string name="BAM">U+1F1E7 U+1F1E6</string>
    <string name="BWP">U+1F1E7 U+1F1FC</string>
    <string name="BRL">U+1F1E7 U+1F1F7</string>
    <string name="BND">U+1F1E7 U+1F1F3</string>
    <string name="BGN">U+1F1E7 U+1F1EC</string>
    <string name="BIF">U+1F1E7 U+1F1EE</string>
    <string name="KHR">U+1F1F0 U+1F1ED</string>
    <string name="XAF">U+1F1E8 U+1F1F2</string>
    <string name="CAD">U+1F1E8 U+1F1E6</string>
    <string name="CVE">U+1F1E8 U+1F1FB</string>
    <string name="KYD">U+1F1F0 U+1F1FE</string>
    <string name="CLP">U+1F1E8 U+1F1F1</string>
    <string name="CNY">U+1F1E8 U+1F1F3</string>
    <string name="COP">U+1F1E8 U+1F1F4</string>
    <string name="KMF">U+1F1F0 U+1F1F2</string>
    <string name="CDF">U+1F1E8 U+1F1E9</string>
    <string name="NZD">U+1F1F3 U+1F1FF</string>
    <string name="CRC">U+1F1E8 U+1F1F7</string>
    <string name="HRK">U+1F1ED U+1F1F7</string>
    <string name="CUP">U+1F1E8 U+1F1FA</string>
    <string name="TRY">U+1F1F9 U+1F1F7</string>
    <string name="DKK">U+1F1E9 U+1F1F0</string>
    <string name="DJF">U+1F1E9 U+1F1EF</string>
    <string name="DOP">U+1F1E9 U+1F1F2</string>
    <string name="EGP">U+1F1EA U+1F1EC</string>
    <string name="SVC">U+1F1F8 U+1F1FB</string>
    <string name="ERN">U+1F1EA U+1F1F7</string>
    <string name="ETB">U+1F1EA U+1F1F9</string>
    <string name="FKP">U+1F1EB U+1F1F0</string>
    <string name="FJD">U+1F1EB U+1F1EF</string>
    <string name="XPF">U+1F1F5 U+1F1EB</string>
    <string name="XDR">U+1F1E6 U+1F1F6</string>
    <string name="GMD">U+1F1EC U+1F1F2</string>
    <string name="GEL">U+1F1EC U+1F1EA</string>
    <string name="GHS">U+1F1EC U+1F1ED</string>
    <string name="GIP">U+1F1EC U+1F1EE </string>
    <string name="GTQ">U+1F1EC U+1F1F9</string>
    <string name="GNF">U+1F1EC U+1F1F3</string>
    <string name="GWP">U+1F1EC U+1F1FC</string>
    <string name="GYD">U+1F1EC U+1F1FE</string>
    <string name="HNL">U+1F1ED U+1F1F3</string>
    <string name="SLL">U+1F1F8 U+1F1F1</string>
    <string name="SZL">U+1F1F8 U+1F1FF</string>
    <string name="HTG">U+1F1ED U+1F1F9</string>
    <string name="HKD">U+1F1ED U+1F1F0</string>
    <string name="HUF">U+1F1ED U+1F1FA</string>
    <string name="ISK">U+1F1EE U+1F1F8</string>
    <string name="IDR">U+1F1EE U+1F1E9</string>
    <string name="IRR">U+1F1EE U+1F1F7</string>
    <string name="IQD">U+1F1EE U+1F1F6</string>
    <string name="ILS">U+1F1EE U+1F1F1</string>
    <string name="LSL">U+1F1F1 U+1F1F8</string>
    <string name="JMD">U+1F1EF U+1F1F2</string>
    <string name="JPY">U+1F1EF U+1F1F5</string>
    <string name="JOD">U+1F1EF U+1F1F4</string>
    <string name="ANG">U+1F1F3 U+1F1F1</string>
    <string name="KZT">U+1F1F0 U+1F1FF</string>
    <string name="KES">U+1F1F0 U+1F1EA</string>
    <string name="KPW">U+1F1F0 U+1F1F5</string>
    <string name="KRW">U+1F1F0 U+1F1F7</string>
    <string name="KWD">U+1F1F0 U+1F1FC</string>
    <string name="KGS">U+1F1F0 U+1F1EC</string>
    <string name="LAK">U+1F1F1 U+1F1E6</string>
    <string name="LBP">U+1F1F1 U+1F1E7</string>
    <string name="LRD">U+1F1F1 U+1F1F7</string>
    <string name="LYD">U+1F1F1 U+1F1FE</string>
    <string name="CHF">U+1F1E8 U+1F1ED</string>
    <string name="MOP">U+1F1F2 U+1F1F4</string>
    <string name="MKD">U+1F1F2 U+1F1F0</string>
    <string name="MWK">U+1F1F2 U+1F1FC</string>
    <string name="MYR">U+1F1F2 U+1F1FE</string>
    <string name="MVR">U+1F1F2 U+1F1FB</string>
    <string name="MTL">U+1F1F2 U+1F1F9</string>
    <string name="MRU">U+1F1F2 U+1F1F7</string>
    <string name="RON">U+1F1F7 U+1F1F4</string>
    <string name="MUR">U+1F1F2 U+1F1FA</string>
    <string name="MXN">U+1F1F2 U+1F1FD</string>
    <string name="MDL">U+1F1F2 U+1F1E9</string>
    <string name="MNT">U+1F1F2 U+1F1F3</string>
    <string name="MAD">U+1F1F2 U+1F1E6</string>
    <string name="MZM">U+1F1F2 U+1F1FF</string>
    <string name="ZMW">U+1F1FF U+1F1F2</string>
    <string name="MMK">U+1F1F2 U+1F1F2</string>
    <string name="ZAR">U+1F1FF U+1F1E6</string>
    <string name="NAD">U+1F1F3 U+1F1E6</string>
    <string name="NPR">U+1F1F3 U+1F1F5</string>
    <string name="NIO">U+1F1F3 U+1F1EE</string>
    <string name="NOK">U+1F1F3 U+1F1F4</string>
    <string name="OMR">U+1F1F4 U+1F1F2</string>
    <string name="PKR">U+1F1F5 U+1F1F0</string>
    <string name="PGK">U+1F1F5 U+1F1EC</string>
    <string name="PYG">U+1F1F5 U+1F1FE</string>
    <string name="PEN">U+1F1F5 U+1F1EA</string>
    <string name="PHP">U+1F1F5 U+1F1ED</string>
    <string name="PLN">U+1F1F5 U+1F1F1</string>
    <string name="QAR">U+1F1F6 U+1F1E6</string>
    <string name="RUB">U+1F1F7 U+1F1FA</string>
    <string name="RWF">U+1F1F7 U+1F1FC</string>
    <string name="SHP">U+1F1F8 U+1F1ED</string>
    <string name="WST">U+1F1FC U+1F1F8</string>
    <string name="SAR">U+1F1F8 U+1F1E6</string>
    <string name="RSD">U+1F1F7 U+1F1F8</string>
    <string name="SCR">U+1F1F8 U+1F1E8</string>
    <string name="SGD">U+1F1F8 U+1F1EC</string>
    <string name="STN">U+1F1F8 U+1F1F9</string>
    <string name="SBD">U+1F1F8 U+1F1E7</string>
    <string name="BBD">U+1F1E7 U+1F1E7</string>
    <string name="SOS">U+1F1F8 U+1F1F4</string>
    <string name="LKR">U+1F1F1 U+1F1F0</string>
    <string name="SRD">U+1F1F8 U+1F1F7</string>
    <string name="SEK">U+1F1F8 U+1F1EA</string>
    <string name="SYP">U+1F1F8 U+1F1FE</string>
    <string name="TWD">U+1F1F9 U+1F1FC</string>
    <string name="TJS">U+1F1F9 U+1F1EF</string>
    <string name="TZS">U+1F1F9 U+1F1FF</string>
    <string name="THB">U+1F1F9 U+1F1ED</string>
    <string name="TOP">U+1F1F9 U+1F1F4</string>
    <string name="TTD">U+1F1F9 U+1F1F9</string>
    <string name="TND">U+1F1F9 U+1F1F3</string>
    <string name="TMT">U+1F1F9 U+1F1F2</string>
    <string name="UGX">U+1F1FA U+1F1EC</string>
    <string name="UAH">U+1F1FA U+1F1E6</string>
    <string name="AED">U+1F1E6 U+1F1EA</string>
    <string name="GBP">U+1F1EC U+1F1E7</string>
    <string name="UYU">U+1F1FA U+1F1FE</string>
    <string name="UZS">U+1F1FA U+1F1FF</string>
    <string name="VUV">U+1F1FB U+1F1FA</string>
    <string name="VES">U+1F1FB U+1F1EA</string>
    <string name="YER">U+1F1FE U+1F1EA</string>
    <string name="ZWL">U+1F1FF U+1F1FC</string>
    <string name="SSP">U+1F1F8 U+1F1F8</string>
    <string name="SDG">U+1F1F8 U+1F1E9</string>
    <string name="AZN">U+1F1E6 U+1F1FF</string>
    <string name="MZN">U+1F1F2 U+1F1FF</string>
    <string name="NGN">U+1F1F3 U+1F1EC</string>



</resources>